--- a/Browser101/carrot/style.css
+++ b/Browser101/carrot/style.css
@@ -44,7 +44,7 @@ body {
   transform: scale(1.1);
 }
 
-.control__counter {
+.control__timer {
   width: 150px;
   height: 60px;
   font-size: 40px;
@@ -85,7 +85,8 @@ body {
   color: white;
   border-radius: 30px;
   position: absolute;
-  top: 50%;
+  z-index: 1;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 50px;
@@ -93,7 +94,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  visibility: visible;
+  visibility: hidden;
 }
 
 .Pop-up__btn {
